Apply assorted linux fixes

--- a/mc4kidz/CMakeLists.txt
+++ b/mc4kidz/CMakeLists.txt
@@ -4,9 +4,10 @@ target_include_directories(libmc4kidz PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
 
 message(STATUS "libs ${wxWidgets_LIBRARIES}")
 
-target_link_libraries(libmc4kidz PRIVATE ${wxWidgets_LIBRARIES} ${GLUT_LIBRARIES} ${OpenGL_LIBRARIES})
+target_link_libraries(libmc4kidz INTERFACE OpenGL::OpenGL ${GLUT_LIBRARIES})
 
 add_executable(mc4kidz "main.cpp")
-target_link_libraries(mc4kidz PRIVATE libmc4kidz)
+target_link_libraries(mc4kidz libmc4kidz OpenGL::GLU OpenGL::OpenGL ${GLUT_LIBRARIES})
+message(STATUS "GL stuff: ${OPENGL_GLU_FOUND}")
 
 add_subdirectory(tests)
