Add GLU library to libmc4kidz target
Hopefully converging on windows/linux parity on this build system

--- a/mc4kidz/CMakeLists.txt
+++ b/mc4kidz/CMakeLists.txt
@@ -4,7 +4,7 @@ target_include_directories(libmc4kidz PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
 
 message(STATUS "libs ${wxWidgets_LIBRARIES}")
 
-target_link_libraries(libmc4kidz PRIVATE OpenGL::GL GLUT::GLUT)
+target_link_libraries(libmc4kidz PRIVATE OpenGL::GL GLUT::GLUT OpenGL::GLU)
 
 add_executable(mc4kidz "main.cpp")
 target_link_libraries(mc4kidz PRIVATE libmc4kidz OpenGL::GL GLUT::GLUT)
