Add playbook file support, and too many other things
This also grows the mesh to 17x17 pins, adds various extra interfaces to pre-existing classes, fixes the hardcoded domain bounds in the State class, and some other stuff.

--- a/mc4kidz/CMakeLists.txt
+++ b/mc4kidz/CMakeLists.txt
@@ -1,5 +1,5 @@
 ﻿# set(CMAKE_WIN32_EXECUTABLE true)
-add_library (libmc4kidz "state.cpp;shapes.cpp;materials.cpp;particle.cpp;mesh.cpp;pie_chart.cpp;line_plot.cpp;histogram.cpp;info_pane.cpp")
+add_library (libmc4kidz "state.cpp;shapes.cpp;materials.cpp;particle.cpp;mesh.cpp;pie_chart.cpp;line_plot.cpp;histogram.cpp;info_pane.cpp;playbook.cpp")
 target_include_directories(libmc4kidz PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
 
 message(STATUS "libs ${wxWidgets_LIBRARIES}")
